<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_category" />
        <item
            android:id="@+id/nav_company"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/nav_company" />
        <item
            android:id="@+id/nav_bid"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_bids" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_share" />
            <item
                android:id="@+id/nav_refer"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/nav_refer" />
        </menu>
    </item>

</menu>
