<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_account_name"
        android:id="@+id/account_name"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_account_balance"
        android:id="@+id/account_balance"
        android:layout_below="@id/account_name"/>
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linear_layout_phone">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_account_phone"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/phone_number"
            android:inputType="phone"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/account_balance"
        android:id="@+id/linear_layout_withdraw">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_account_withdraw"
            />
        <EditText
            android:inputType="number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:imeActionId="10"
            android:imeActionLabel="Withdraw"
            android:imeOptions="actionUnspecified"
            android:id="@+id/withdraw_amount"
            android:hint="@string/hint_account_withdraw"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linear_layout_deposit"
        android:layout_below="@id/linear_layout_withdraw">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_account_deposit"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:imeActionLabel="Deposit"
            android:imeActionId="20"
            android:imeOptions="actionUnspecified"
            android:id="@+id/deposit_amount"
            android:hint="@string/hint_account_deposit"
            android:inputType="number"/>
    </LinearLayout>

</RelativeLayout>