<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ProgressBar
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/progressBar"
        android:visibility="gone"/>

    <TextView
        android:text="@string/about_company_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/about_company"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"/>

    <TextView
        android:textAlignment="center"
        android:text="@string/text_active_users"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/users_count"
        android:layout_below="@id/about_company"/>

    <TextView
        android:textAlignment="center"
        android:text="@string/text_active_campaigns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/campaigns_count"
        android:layout_below="@id/users_count"/>

    <TextView
        android:textAlignment="center"
        android:text="@string/text_funds_raised"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/funds_count"
        android:layout_below="@id/campaigns_count"/>
</RelativeLayout>