<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:id="@+id/progressBar"/>

    <TextView
        android:id="@+id/text_password_reset_message"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_password_reset_screen"/>

    <EditText
        android:hint="@string/hint_password_reset_email"
        android:layout_below="@id/text_password_reset_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:id="@+id/email_address"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_button_reset_password"
        android:id="@+id/password_reset_submit_button"
        android:layout_below="@id/email_address"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_sign_in_short"
        android:id="@+id/sign_in_button"
        android:layout_below="@id/password_reset_submit_button"/>
</RelativeLayout>