<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ProgressBar
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/progressBar"
        android:visibility="gone"/>
    
    <EditText
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/old_password"
        android:hint="@string/hint_password_change_old_password"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"/>
    
    <EditText
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/new_password"
        android:hint="@string/hint_password_change_new_password"
        android:layout_below="@id/old_password"/>

    <EditText
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/confirm_password"
        android:hint="@string/hint_password_change_confirm_password"
        android:layout_below="@id/new_password"/>
    
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/submitButton"
        android:text="@string/text_password_change_submit_button"
        android:layout_below="@id/confirm_password"/>

</RelativeLayout>