<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp">

        <TextView
            android:id="@+id/campaign_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="50sp"
            />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/campaign_image"
            android:layout_below="@id/campaign_name"/>

        <TextView
            android:layout_below="@id/campaign_image"
            android:id="@+id/campaign_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/edit_campaign_button"
            android:text="@string/action_update_campaign"
            android:visibility="gone"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bid_linear_layout"
            android:orientation="horizontal"
            android:layout_below="@id/campaign_amount">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_bid_new_amount"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hint_new_bid_amount"
                android:inputType="number"
                android:id="@+id/amount_new_bid"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_new_bid"
                android:id="@+id/submit_new_bid"/>
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/bid_linear_layout">
            <TextView
                android:id="@+id/campaign_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </ScrollView>

    </RelativeLayout>
</ScrollView>